# platform/openapi.yaml
@@ -239,6 +239,11 @@ components:
           items:
             type: string
           nullable: true
+        resourceIdsToDelete:
+          type: array
+          items:
+            type: string
+          nullable: true
         resources:
           type: array
           items:
